# azure-devops-server-mcp

./: .env.example  .gitignore  LICENSE  README.md  Security.md  claude_mcp_config.json  get_testsuites_testpoints.py  list_testplans.py  pyproject.toml  test_server.py
.claude/agents/: mcp-tool-tester.md
adosmcp/: AzureDevOpsGitRepositories.py  AzureDevOpsPullRequests.py  AzureDevOpsServerClient.py  AzureDevOpsTeamProjects.py  AzureDevOpsWorkItems.py  McpServer.py  decorators.py  list_testplans.py  run.py  server.py
