[project]
name = "azure-devops-server-mcp"
version = "0.1.0"
description = "MCP server for Azure DevOps Server with work item handling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-devops>=7.1.0b4",
    "mcp[cli]>=1.12.2",
]

[project.scripts]
azure-devops-server-mcp = "adosmcp.run:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"