[project]
name = "azure-devops-server-mcp"
version = "0.1.0"
description = "MCP server for Azure DevOps Server with work item handling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-devops>=7.1.0b4",
    "mcp[cli]>=1.12.2",
]

[project.scripts]
azure-devops-server-mcp = "adosmcp.run:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.7",
]
